--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap');
 
-*{
+* {
   font-family: 'Lexend', sans-serif;
 }
 
@@ -9,7 +9,7 @@
 @tailwind utilities;
 
 /* img  */
-.carousel .slider .slide div img{
+.carousel .slider .slide div img {
   height: 400px;
 }
 
@@ -18,6 +18,11 @@
   width: 200px !important;
   height: 100px !important;
 }
-.carousel .thumbs li{
+
+.carousel .thumbs li {
   width: 200px !important;
+}
+
+.file-input-success::file-selector-button {
+  @apply bg-h-secondary text-white
 }
